# clouddash-aws

./: .gitignore  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  agent.md  check2.txt  check_output.txt  check_svelte.js  cleanup_layouts.py  copy_logo.cjs  fix_loops.cjs  fix_loops.js  package-lock.json  package.json  test_cw.js
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
clouddash-web/: package-lock.json  package.json  svelte.config.js  vite.config.ts  wrangler.jsonc
clouddash-web/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
clouddash-web/.svelte-kit/types/: route_meta_data.json
clouddash-web/src/: app.html
clouddash-web/src/lib/server/: license.ts
clouddash-web/src/routes/: +layout.svelte  +page.svelte
clouddash-web/src/routes/contact/: +page.svelte
clouddash-web/src/routes/download/: +page.svelte
clouddash-web/src/routes/pricing/: +page.svelte
clouddash-web/src/routes/privacy/: +page.svelte
clouddash-web/static/: modern.css  site.webmanifest
scripts/: stage-release-artifacts.js  tauri-android-build.js  tauri-linux-build.js  tauri-linux-build.sh  tauri-mac-build.js  tauri-windows-build.js  utils.js
src/: app.css  app.html  replace.cjs  update_layout.cjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  s3.rs  state.rs
src-tauri/src/services/: cloudfront.rs  cloudwatch.rs  dynamodb.rs  ec2.rs  mod.rs  s3.rs  sqs.rs
src/lib/: constants.ts
src/lib/components/: BackButton.svelte  ConfirmDialog.svelte  CopyButton.svelte  DetailLayout.svelte  Icon.svelte  InfoCard.svelte  InlinePolicyModal.svelte  InsightsQueryEditor.svelte  JsonEditor.svelte  JsonLogViewer.svelte  LogStreamViewer.svelte  Login.svelte  MetricChart.svelte  Modal.svelte  PaginatedTable.svelte  QRScanner.svelte  ReorderableList.svelte  Select.svelte  ServiceLayout.svelte  SettingsDialog.svelte  StepFunctionsGraph.svelte  StepNode.svelte  TabBar.svelte  ToastContainer.svelte
src/lib/components/iam/: AddGroupToUserModal.svelte  AddUserToGroupModal.svelte  AttachPolicyModal.svelte  ConfirmModal.svelte  CreateGroupModal.svelte  CreatePolicyModal.svelte  CreateRoleModal.svelte  CreateUserModal.svelte  DeleteConfirmModal.svelte
src/lib/services/: CloudFormation.svelte  CloudFront.svelte  CloudWatch.svelte  DynamoDB.svelte  EC2.svelte  ElasticBeanstalk.svelte  IAM.svelte  Lambda.svelte  S3.svelte  SES.svelte  SNS.svelte  SQS.svelte  SecretsManager.svelte  StepFunctions.svelte  aws-creds.ts  aws.svelte.ts  bookmarks.svelte.ts  confirm.svelte.ts  mobile.ts  navigation.svelte.ts  registry.ts  service-manifest.ts  settings.svelte.ts  tab-utils.ts  title.svelte.ts  toast.svelte.ts
src/lib/utils/: aslParser.ts  json-highlight.ts  pagination.ts  sfnHistoryParser.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/cloudformation/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/cloudformation/[id]/: +page.svelte
src/routes/cloudformation/details/: +page.svelte
src/routes/cloudformation/exports/: +page.svelte
src/routes/cloudformation/stack-sets/: +page.svelte
src/routes/cloudformation/stacks/: +page.svelte
src/routes/cloudfront/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/cloudfront/[id]/: +page.svelte
src/routes/cloudfront/distributions/: +page.svelte
src/routes/cloudwatch/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/cloudwatch/[name]/: +page.svelte
src/routes/cloudwatch/alarms/: +page.svelte
src/routes/cloudwatch/dashboards/: +page.svelte
src/routes/cloudwatch/insights/: +page.svelte
src/routes/cloudwatch/logs/: +page.svelte
src/routes/cloudwatch/metrics/: +page.svelte
src/routes/dynamodb/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/dynamodb/details/: +page.svelte
src/routes/dynamodb/explore/: +page.svelte
src/routes/dynamodb/tables/: +page.svelte
src/routes/ec2/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/ec2/amis/: +page.svelte
src/routes/ec2/details/: +page.svelte
src/routes/ec2/elastic-ips/: +page.svelte
src/routes/ec2/instances/: +page.svelte
src/routes/ec2/key-pairs/: +page.svelte
src/routes/ec2/security-groups/: +page.svelte
src/routes/ec2/snapshots/: +page.svelte
src/routes/ec2/volumes/: +page.svelte
src/routes/elasticbeanstalk/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/elasticbeanstalk/application/: +page.svelte
src/routes/elasticbeanstalk/applications/: +page.svelte
src/routes/iam/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/lambda/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/s3/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/secretsmanager/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/ses/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/sns/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/sqs/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/stepfunctions/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/upgrade/: +page.svelte
(+71 files in other folders)
