[package]
name = "clouddash-aws"
version = "0.1.0"
description = "High-performance local AWS management dashboard"
authors = ["support@chrome-stats.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clouddash_aws_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-scoped-storage = "0.1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"

# Credential resolution + S3 proxy (S3 doesn't support browser CORS)
aws-config = { version = "1.1", default-features = false, features = ["rustls", "rt-tokio", "behavior-version-latest", "sso"] }
aws-credential-types = { version = "1.2", default-features = false, features = ["hardcoded-credentials"] }
base64 = "0.22.1"

[profile.release]
opt-level = "s"       # Optimize for binary size
lto = true            # Link-time optimization
codegen-units = 4     # Reduce parallel code generation units
strip = true          # Strip symbols
panic = "abort"       # Remove panic unwinding

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
